# Keysto

./: .gitignore  Cargo.toml  README.md  cargo.sh
.github/workflows/: pages.yml
docs/: README.md  app.html  index.html
service/: run-web.sh  service.sh  tunnel.sh  watchdog.sh
src/: bundle.rs  evaluate.rs  lib.rs  linkage.rs  main.rs  merkle.rs  order.rs  pow.rs  reason.rs  taproot.rs
tools/: zigcc
