[package]
name = "keystone-btc-proof"
version = "0.0.1"
edition = "2021"
description = "Keystone alpha — Bitcoin SPV proof reference verifier (PR1)"

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
k256 = { version = "0.13", default-features = false, features = ["arithmetic"] }
hmac = "0.12"
bs58 = { version = "0.5", features = ["check"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
